# psychomodels

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.serve-static  Pipfile  README.md  dependabot-alerts.json  docker-compose.yml  eslint.config.mjs  example.env  manage.py  package.json  playwright.config.ts  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vite.config.js  vitest.config.js
.claude/: settings.local.json
.do/: psychomodels-production.yaml  psychomodels-staging.yaml
api/: serializers.py  tests.py  urls.py  views.py
contact/: admin.py  email.py  models.py  tests.py
content_pages/: forms.py  urls.py  views.py
doi_lookup/: apps.py  services.py  tests.py  urls.py  views.py
e2e-tests/: auth.spec.ts  contact.spec.ts  honeypot.spec.ts  static-pages.spec.ts  submit-general.spec.ts  submit-specifics.spec.ts  turnstile.spec.ts
frontend/: eslint.config.mjs  package.json  search.html  submission_wizard.html  tailwind.config.js  vite.config.ts
frontend_src/:  setup-vitest.ts  AccountApp.tsx  ContactFormApp.tsx  DetailViewDev.tsx  MyModelListApp.tsx  SearchApp.tsx  SubmissionWizardApp.tsx  account.tsx  contact_form.tsx  detail_view_dev.tsx  index.css  models.d.ts  my_model_list.tsx  search.html  submission_wizard.html  vite-env.d.ts
highlighted/: admin.py  apps.py  models.py
members/: admin.py  apps.py  headless_adapter.py  models.py  tests.py  urls.py  views.py
models/: forms.py  tests.py  urls.py  views.py
psychology_models/: admin.py  apps.py  email.py  forms.py  index.py  middleware.py  models.py  tests.py  tests_email.py  (+4 more)
(+330 files in other folders)
