[project]
name = "psychomodels"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "algoliasearch>=3.0.0",
    "algoliasearch-django>=3.0.0",
    "dj-database-url>=2.2.0",
    "django>=5.1.1",
    "django-after-response>=0.2.2",
    "django-allauth[socialaccount]>=64.2.1",
    "django-autoslug>=1.9.9",
    "django-browser-reload>=1.15.0",
    "django-cors-headers>=4.4.0",
    "django-countries>=7.6.1",
    "django-currentuser>=0.8.0",
    "django-honeypot>=1.3.0",
    "django-import-export>=4.1.1",
    "django-lb-health-check>=1.0.1",
    "django-markdownx>=4.0.7",
    "django-object-actions>=4.2.0",
    "django-reversion>=5.1.0",
    "django-vite-plugin>=3.0.4",
    "djangorestframework>=3.15.2",
    "gunicorn>=23.0.0",
    "pillow>=10.4.0",
    "psycopg>=3.2.1",
    "psycopg2-binary>=2.9.9",
    "pyjwt[crypto]>=2.9.0",
    "python-dotenv>=1.0.1",
    "sentry-sdk[django]>=2.13.0",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pycodestyle>=2.12.1",
]
